# sudoku

./: Cargo.toml  LICENSE
.github/workflows/: pr-edit.yml  test.yml
docs/: sdk-file-format.md
puzzles/easy/: 1.sdk
puzzles/tests/: corrupt_1.sdk  invalid_2.sdk  vertical_7.sdk  vertical_8.sdk
src/: board.rs  digit.rs  error.rs  error_import.rs  error_invalid_puzzle.rs  helpers.rs  importer.rs  importer_sdk.rs  main.rs  num.rs  sample_boards.rs  strategy.rs  strategy_sweep_tile.rs  test_utils.rs  tile.rs  tile_group.rs
src/error/: import.rs  mod.rs
src/importer/: importer.rs  mod.rs  sdk.rs
src/strategy/: mod.rs  solve.rs  strategy.rs  strategy_sweep_tile.rs
