[package]
name = "sudoku"
version = "0.1.0"
authors = ["Sam Myers <sam@sam-myers.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
[dependencies.clap]
version = "3.2.25"
features = [ "suggestions", "color" ]
